[package]
name = "npsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["cookies", "gzip"] }
reqwest_cookie_store = "0.4"
html_parser = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tokio-tungstenite = { version = "0.17", features = ["native-tls"] }
http = "0.2"
url = "2.3"
